--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,6 @@ BRAVE_API_KEY=tu_api_key_brave
 LOG_LEVEL=INFO
 
 # --- Arranque de stack multimedia (macOS) ---
-# Si es true, al iniciar Shaggy se intentan levantar automaticamente:
+# Si es true, al iniciar RUFÜS se intentan levantar automaticamente:
 # Radarr (7878), Prowlarr (9696), Transmission (9091) y Jellyfin (8096)
-SHAGGY_START_MEDIA_STACK=false
+RUFUS_START_MEDIA_STACK=false
